--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,6 @@
     }
 }
 @media(min-width:960px) {
-    #nominations .well{
-        height: 600px;
-    }
 
     #nominations img{
         height: 250px;
@@ -39,13 +36,18 @@
     background-color: rgba(0, 150, 100, 0.5);
     height: 375px;
     width: 90%;
+    opacity: 0;
 }
 
-.center {
+.movie-center {
     position: absolute;
     transform: translate(-50%, -65%);
     text-align: center;
     padding-top: 45%;
+}
+
+.well:hover .movie-overlay{
+    opacity: 1;
 }
 
 #submitNominations, .alert{
