nominations overlay and hovering trigger

--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,12 @@
 }
 @media(min-width:960px) {
 
-    #nominations img{
-        height: 250px;
+    #nominations .placeholder{
+        height: 230px;
+    }
+
+    #nominations .full{
+        height: 300px;
     }
 }
 
@@ -46,7 +50,28 @@
     padding-top: 45%;
 }
 
-.well:hover .movie-overlay{
+.nomination-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: rgba(150, 0, 50, 0.5);
+    height: 300px;
+    width: 196px;
+    opacity: 0;
+}
+
+.nomination-center {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding-top: 65%;
+}
+
+.hovertrigger:hover .movie-overlay{
+    opacity: 1;
+}
+
+.card:hover .nomination-overlay{
     opacity: 1;
 }
 
